notifaction overlapping and post full view is fixed

--- a/public/css/instagram.css
+++ b/public/css/instagram.css
@@ -2046,7 +2046,7 @@ body {
 .ig-fullscreen-post .ig-cseries-media video {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
   display: block;
 }
 
